--- a/.github/workflows/maui-tests.yml
+++ b/.github/workflows/maui-tests.yml
@@ -23,6 +23,9 @@ jobs:
  
       - name: Installeer MAUI workloads
         run: dotnet workload install maui-android
+
+      - name: Build Android
+        run: dotnet build --framework net8.0-android
  
       - name: Herstel afhankelijkheden
         run: dotnet restore
