--- a/.github/workflows/maui-tests.yml
+++ b/.github/workflows/maui-tests.yml
@@ -11,7 +11,7 @@ on:
  
 jobs:
   test:
-    runs-on: windows-latest  # Of windows-latest/macOS-latest als specifiek platform nodig is
+    runs-on: ubuntu-latest  # Of windows-latest/macOS-latest als specifiek platform nodig is
   # Of windows-latest/macOS-latest als specifiek platform nodig is
 
     steps:
@@ -25,13 +25,8 @@ jobs:
  
       - name: Installeer MAUI workloads
         run: dotnet workload install maui-android
-       
-      - name: Installeer meer MAUI workloads
-        run: dotnet workload install maui
 
-      - name: Build Android
-        run: dotnet build --framework net8.0-android
- 
+
       - name: Herstel afhankelijkheden
         run: dotnet restore
  
