--- a/.github/workflows/maui-tests.yml
+++ b/.github/workflows/maui-tests.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Installeer MAUI workloads
         run: dotnet workload install maui-android
 
+      - name: Install MAUI workloads
+        run: dotnet workload install maui
+
 
       - name: Herstel afhankelijkheden
         run: dotnet restore
